sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:10: error: type mismatch;
 found   : Unit
 required: Int
    while (i-j>=0) {
    ^